[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/message.png" type="Texture" id=1]
[ext_resource path="res://assets/font/dogicapixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/UI.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/gameover.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="UI" type="Node2D"]
z_index = 3
script = ExtResource( 3 )

[node name="GetReadyMessage" type="TextureRect" parent="."]
margin_left = 139.0
margin_top = 212.0
margin_right = 323.0
margin_bottom = 479.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
visible = false
margin_left = 204.0
margin_top = 20.0
margin_right = 246.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Node2D" parent="."]
visible = false

[node name="Message" type="TextureRect" parent="GameOver"]
margin_left = 138.0
margin_top = 314.0
margin_right = 330.0
margin_bottom = 356.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalScoreLabel" type="Label" parent="GameOver"]
modulate = Color( 0.988235, 0.627451, 0.282353, 1 )
margin_left = 212.0
margin_top = 414.0
margin_right = 252.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueLabel" type="Label" parent="GameOver"]
margin_left = 123.0
margin_top = 669.0
margin_right = 339.0
margin_bottom = 683.0
custom_fonts/font = SubResource( 3 )
text = "TAP TO CONTINUE"
